correct event prevention

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     window.alert ("Angular not loaded yet");
                   }
                   // prevent navigation
-                  event.preventDefault ();
+                  e.preventDefault ();
                 }
             }
             // http://stackoverflow.com/questions/12820953/asynchronous-script-loading-callback#answer-12821561
