--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     angular.bootstrap(document, ['demoApp']);
                     //update url
                     if ('history' in window) {
-                      window.history.pushState({}, '',  window.location.pathname + e.target.pathname.replace('/', ''));
+                      window.history.replaceState({}, '',  window.location.pathname + e.target.pathname.replace('/', ''));
                     }
                   } else {
                     //normally, you can just navigate to the link,
@@ -56,7 +56,7 @@
                     window.alert ("Angular not loaded yet");
                   }
                   // prevent navigation
-                  event.preventDefault ();
+                  e.preventDefault ();
                 }
             }
             // http://stackoverflow.com/questions/12820953/asynchronous-script-loading-callback#answer-12821561
